Fixed content overlapping navigation bar UI problem

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -125,12 +125,15 @@ ul {
   }
 }
 
+main {
+  z-index: 1;
+}
 
 header {
   padding: 2%;
   display: flex;
   flex-direction: row;
-  z-index: 1;
+  z-index: 2;
 
   a {
     text-decoration: none;
